feat：新版本的vscode需要安装这个包，否则会报错（应该的vscode的Bug）

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,5 @@ django==4.2.8
 djangorestframework==3.14.0
 mysqlclient==2.1.0
 djangorestframework_simplejwt==5.3.1
+# vscode需要下面这个
+importlib-metadata
