--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,6 @@ djangorestframework_simplejwt==5.3.1
 # vscode需要下面这个
 importlib-metadata
 # 处理跨域
-django-cors-headers
+django-cors-headers==4.3.1
+pandas==2.0.3
+openpyxl==3.1.2
